Fix a few typos

--- a/content/community/training.adoc
+++ b/content/community/training.adoc
@@ -31,7 +31,7 @@ helpdesk@starweaver.com
 
 == For individuals
 
-Looking for a curated ciriculum to jump start your learning?
+Looking for a curated curriculum to jump start your learning?
 Several courses are offered.
 
 === Online courses
