Add beginner guide to test.check
There are a few formatting issues that I can't figure out:

- the title formatting doesn't work
- some of the #() inline code examples don't work (but not all???)
- the backticked level-5 headers don't look like headers

--- a/content/guides/guides.adoc
+++ b/content/guides/guides.adoc
@@ -25,6 +25,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 === Tools
 
 * <<deps_and_cli#,Deps and CLI>>
+* <<test_check/beginner#,test.check>>
 
 === Libraries
 
