--- a/content/guides/guides.adoc
+++ b/content/guides/guides.adoc
@@ -25,7 +25,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 === Tools
 
 * <<deps_and_cli#,Deps and CLI>>
-* <<test_check/beginner#,test.check>>
+* <<test_check_beginner#,test.check>>
 
 === Libraries
 
