Added note saying "no hierarchical relationship"

--- a/content/reference/namespaces.adoc
+++ b/content/reference/namespaces.adoc
@@ -13,7 +13,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
 
-Namespaces are mappings from simple (unqualified) symbols to Vars and/or Classes. Vars can be interned in a namespace, using _**def**_ or any of its variants, in which case they have a simple symbol for a name and a reference to their containing namespace, and the namespace maps that symbol to the same var. A namespace can also contain mappings from symbols to vars interned in other namespaces by using https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/refer[refer] or https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/use[use], or from symbols to Class objects by using https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/import[import]. Note that namespaces are first-class, they can be enumerated etc. Namespaces are also dynamic, they can be created, removed and modified at runtime, at the Repl etc.
+Namespaces are mappings from simple (unqualified) symbols to Vars and/or Classes. There is no hierarchical relationship among namespaces. Vars can be interned in a namespace, using _**def**_ or any of its variants, in which case they have a simple symbol for a name and a reference to their containing namespace, and the namespace maps that symbol to the same var. A namespace can also contain mappings from symbols to vars interned in other namespaces by using https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/refer[refer] or https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/use[use], or from symbols to Class objects by using https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/import[import]. Note that namespaces are first-class, they can be enumerated etc. Namespaces are also dynamic, they can be created, removed and modified at runtime, at the Repl etc.
 
 The best way to set up a new namespace at the top of a Clojure source file is to use the https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns macro]. By default this will create a new namespace that contains mappings for the classnames in +java.lang+ plus `clojure.lang.Compiler`, and the functions in `clojure.core`.
 
