--- a/content/community/training.adoc
+++ b/content/community/training.adoc
@@ -66,5 +66,5 @@ For conferences and upcoming events, check the upcoming <<events,Events>> list.
 == Maintenance
 
 If you would like to be added or removed from this list,
-please contact __alex.miller@cognitect.com__
+please contact __clojure@cognitect.com__
 or submit a pull request.
