--- a/content/dev/creating_tickets.adoc
+++ b/content/dev/creating_tickets.adoc
@@ -13,7 +13,7 @@ The first step in the contribution process is to open a ticket. Please do so thr
 
 If you have questions about whether some behavior of Clojure is a bug, or submitting bug reports or enhancement requests, please ask on the https://groups.google.com/group/clojure[clojure Google group] or in other discussion forums. If a ticket is a duplicate of an existing ticket, it will be marked as such during triage.
 
-You need a Clojure JIRA account to create a ticket.  Go to the https://clojure.atlassian.net/projects/CLJ[Clojure JIRA page] and click the "Log In" link near the top right of the page, then on the next page click the "sign up" link.  If you see your name instead of a "Log in" link, you already have an account and are signed in. Please note that due to spam control, you will be able to create a ticket but unable to comment or edit tickets. Please request elevated privileges on mailing lists or discussion forums or contact Alex Miller at alex.miller@cognitect.com.
+You need a Clojure JIRA account to create a ticket.  Go to the https://clojure.atlassian.net/projects/CLJ[Clojure JIRA page] and click the "Log In" link near the top right of the page, then on the next page click the "sign up" link.  If you see your name instead of a "Log in" link, you already have an account and are signed in. Please note that due to spam control, you will be able to create a ticket but unable to comment or edit tickets. Please request elevated privileges on mailing lists or discussion forums or contact Alex Miller at clojure@cognitect.com.
 
 == Qualities of a Great Ticket
 
