--- a/content/community/ask.adoc
+++ b/content/community/ask.adoc
@@ -27,4 +27,4 @@ When problems or requests are logged, developers can assess and, if needed, crea
 
 == Voting
 
-Users may vote on both questions and answers. Highly voted problem or request questions will be more strongly considered for inclusion in future releases of Clojure, ClojureScript, libraries, etc.
+Users may vote on both questions and answers. Votes will be used to inform decisions about future releases of Clojure, ClojureScript, libraries, etc.
