add resource link

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -9,6 +9,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 == Clojure Discussion
 
+* https://ask.clojure.org[Q&A Forum] (official)
 * https://groups.google.com/group/clojure[Clojure Google Group] (official)
 * http://clojurians.net[Clojurians Slack Chat]
 * https://clojurians.zulipchat.com[Clojurians Zulip Chat]
